Various updates, incl. changing to light themes

--- a/tmux.conf
+++ b/tmux.conf
@@ -135,9 +135,11 @@ if-shell "test -n $(command -v tty-clock)" {
     bind -T prefix J {
         if-shell "test #{lock-after-time} -eq 300" {
             set -s lock-after-time 0
+            set -s lock-command ""
             display "Locking disabled"
         } {
             set -s lock-after-time 300
+            set -s lock-command "tty-clock -SctB -C 7 -d 1"
             display "Locking enabled (#{lock-after-time}s)"
         }
     }
