--- a/tmux.conf
+++ b/tmux.conf
@@ -59,10 +59,13 @@ bind -T prefix X kill-pane #P
 
 set -g silence-action current
 set -g monitor-silence 0
+set -g visual-activity on
+set -g visual-bell on
+set -g visual-silence on
 bind -T prefix \" {
     # toggle whether we monitor silence in a pane or not
     # -Fp: expand format options; pane-specific
-    menu -T "Monitor Options" -x W -y W \
+    menu -T "Monitor #P:#{pane_current_command}" -x W -y W \
         "#{?#{==:#{monitor-silence},0},0,1} silence #{?#{==:#{monitor-silence},0},,(#{monitor-silence})}" \
         s 'set -Fp monitor-silence "#{?#{==:#{monitor-silence},0},30,0}"' \
         "#{monitor-bell} bell" b 'set -Fp monitor-bell' \
@@ -129,7 +132,7 @@ set -g set-titles on
 
 # set timeout 5 mins
 set -g lock-after-time 0
-if-shell "test -n $(command -v tty-clock)" {
+if-shell "command -v tty-clock" {
     set -g lock-after-time 300
     set -g lock-command "tty-clock -SctB -C 7 -d 1"
     bind -T prefix J {
@@ -153,12 +156,15 @@ set -g display-time 2000
 
 # give full color if 256-bit or less color if 8-bit
 # also, ensure focus reporting is set for focus-events and extkeys for extended keys
-set -as terminal-overrides ",*:U8=0,tmux*:focus:extkeys,*-256color:RGB"
+set -as terminal-overrides ",*:U8=0,tmux*:focus:extkeys,*-256color:RGB,alacritty:RGB"
 
-if-shell "echo $TERM|grep -Eq '(256color|kitty)'" {
+# set TERM variable as well as inactive pane border color
+if-shell "echo $TERM|grep -Eq '(256color|alacritty|kitty)'" {
     set -s default-terminal "tmux-256color"
+    set -g pane-border-style fg=colour240
 } {
     set -s default-terminal "tmux"
+    set -g pane-border-style fg=colour7
 }
 
 # dynamically set tmux colors to the zsh prompt colors
@@ -224,11 +230,6 @@ set -Fg clock-mode-colour "#{@fav_fg}"
 #set -g clock-mode-style 12
 
 # pane border
-if-shell "echo $TERM|grep -q 256color" {
-    set -g pane-border-style fg=colour240
-} {
-    set -g pane-border-style fg=colour7
-}
 set -g pane-active-border-style "fg=#{@fav_fg}"
 set -g pane-border-lines double
 set -g pane-border-status bottom
